fixed reading header gap

--- a/2021/reading-styles.css
+++ b/2021/reading-styles.css
@@ -176,6 +176,7 @@ p.background {
 }
 
 .heading {
+	top: -1px;
 	display: flex;
 	justify-content: center;
 }
